--- a/src/components/card.scss
+++ b/src/components/card.scss
@@ -6,5 +6,6 @@
       background-size: cover;
       width: 100%;
       height: 20rem;
+      box-sizing: border-box;
   }
 }
